# gop/docs/swagger.json
@@ -327,6 +327,42 @@
                 }
             }
         },
+        "/v1/upload": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Upload"
+                ],
+                "summary": "上传文件",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/user": {
             "delete": {
                 "security": [
@@ -576,6 +612,11 @@
         },
         "/v1/user/role": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -732,6 +773,11 @@
         },
         "request.UpdateInfoReq": {
             "type": "object",
+            "required": [
+                "avatar",
+                "introduction",
+                "name"
+            ],
             "properties": {
                 "avatar": {
                     "type": "string"
